# Expressive-Profile-Pipeline

./: README.md  pyproject.toml
ep_pipeline/: __init__.py  assemble_corpus.py  config.py  io.py  models.py
ep_pipeline/ai_imitation/: __init__.py  completion_mlx.py  make_prompts.py  run_batch_mlx.py
ep_pipeline/efa/: __init__.py  efa.py  metric_taxonomy.py
ep_pipeline/scoring/: __init__.py  get_lexicon.py  get_other_linguistic.py  get_semantic.py  get_syntax_punct.py  get_td_linguistic.py  pipeline_workers.py  runner.py
ep_pipeline_run_templates/: run_ai_continuation.py  run_apply_efa.py  run_efa.py  run_scoring.py
tests/: test_ep_pipeline.py
